# IntelMedIA

./: .gitignore  AGENTS.md  README.md  RUNPOD_GITHUB_ACTIONS.md  docker-compose.yml  huggingface-syntax.md  project-spec.md  project-spec.md.bak
.github/workflows/: runpod-image.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 20260412_0001_create_session_metadata.py
backend/app/: __init__.py  config.py  database.py  logging.py  main.py  redis_client.py
backend/app/models/: session.py  session_metadata.py
backend/app/routes/: __init__.py  auth.py  catalog.py  sessions.py  stream.py  ws.py
backend/app/schemas/: __init__.py  auth.py  session.py  sessions.py
backend/app/services/: asr_pipeline.py  audio_store.py  auth.py  catalog.py  cleanup.py  guardrails.py  hf_runtime.py  metrics.py  orchestrator.py  runpod_asr.py  session.py  sessions.py  soap_generation.py  soap_store.py  streaming.py  transcript_store.py  translation.py
backend/app/workers/: asr_worker.py  mt_worker.py  soap_worker.py
backend/tests/: test_session_flow.py
docs/architecture/: runtime-flow.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.mjs  vite.config.ts
frontend/public/: audio-capture-worklet.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatContainer.tsx  ChatMessage.tsx  Composer.tsx  Header.tsx  LoginForm.tsx  SessionControls.tsx  SessionSetup.tsx  SoapPane.tsx  SoapPanel.tsx  StatusBanner.tsx  TranscriptPane.tsx  VolumeMeter.tsx
frontend/src/hooks/: useAudioMeter.ts  useSpeechRecognition.ts  useStreamingAudioCapture.ts
infra/: docker-compose.yml
infra/env/: .env.example
infra/prometheus/: prometheus.yml
runpod/: Dockerfile  asr_qwen3_ws.py  requirements.txt
tests/e2e/: consultation.spec.ts
(+16 files in other folders)
