[project]
name = "intelmedia-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0,<9.0.0"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
