[project]
name = "intelmedia-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "numpy>=2.1.0",
    "torch>=2.4.0",
    "transformers>=4.55.0",
    "accelerate>=0.34.0",
    "sentencepiece>=0.2.0",
    "qwen-asr>=0.0.6,<0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
